# maimai-dx-regression

./: .gitignore  .gitmodules  LICENSE.md  README.md  bpm.csv  maimai.csv  model.ipynb  pyproject.toml  songs.csv  visualization.py
assets/: model.html
